--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ build_job:
 deploy_job:
   stage: deploy
   script:
-    - sudo rsync -rv public/ /var/www/html/
+    - sudo cp ./public/ /var/www/html/
     - sudo chown -R root:root /var/www/html/
   only:
     - master
