--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://caffeinatedengineering.io"
+baseurl = "http://caffeinatedengineering.io"
 title = "Caffeinated Engineering"
 copyright = "&copy; 2014-2016 Matt Jones"
 theme = "academic"
